Refactoring frontend and controllers